--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "redux": "^4.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
