--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.3.1",
     "redux": "^4.0.1",
     "rxjs": "^6.0.0",
+    "uniqid": "^5.0.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
